Integration of basic GA tracking, workshop spacing fixes, updated whitepaper URL.

--- a/client/src/app/workshop/workshop.component.scss
+++ b/client/src/app/workshop/workshop.component.scss
@@ -41,9 +41,10 @@ ul {
 
 #intro {
   letter-spacing: 2px;
+  width: 70%;
 
 	h2 {
-		font-size: em(48px);
+		@include font('Proza Libre', 800, em(48px));
 	}
 	h4 {
 		@include font('Proza Libre', 800);
@@ -54,6 +55,7 @@ ul {
 		  font-size: em(64px);
 	  }
 	  h4 {
+			margin-top: 8%;
 		  letter-spacing: 1.5px;
 		  font-size: em(24px);
 		  text-transform: uppercase;
@@ -82,5 +84,26 @@ ul {
 		&:nth-child(3) {
 			width: 100%;
 		}
+	}
+
+  @include not-phones {
+		h3 {
+	  	margin-top: 8%;
+	  	margin-bottom: 60px;
+	  }
+		.blue {
+	  	margin-bottom: 40px;
+	  }
+	}
+
+	#document {
+		width: 70%;
+	}
+}
+
+#end-btn {
+	@include not-phones {
+		margin-top: 25%;
+		margin-bottom: 25%;
 	}
 }
